# Nihui_AppUpdater

./: .gitignore  LICENSE  README.md  README_DEV.md  RELEASE.md  VERSION.md  components.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: sync-version.js
src/: App.vue  i18n.ts  main.ts  types.ts
src-tauri/: Cargo.toml  generate-ico-icns.cjs  generate-icons.cjs  tauri.conf.json  tauri.keypai.pub
src-tauri/capabilities/: default.json  opener-scope.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: main.css
src/components/blocks/: AddonConfigModal.vue  AddonListItem.vue  SettingsModal.vue  TitleBar.vue  UninstallConfirmDialog.vue  UpdateDialog.vue  WowStatus.vue
src/locales/: de.ts  en.ts  es.ts  fr.ts  index.ts  it.ts  pt.ts
src/services/: notification.ts  tauri.ts
